<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/search_menu"
    android:icon="@android:drawable/ic_menu_search"
    android:visible="false"
    app:showAsAction="ifRoom|collapseActionView"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    android:title="@string/search_title"/>
  <item
    android:id="@+id/copy_menu"
    android:icon="@drawable/copy"
    app:showAsAction="ifRoom"
    android:title="@string/copy"/>
  <item
    android:id="@+id/share_menu"
    android:icon="@android:drawable/ic_menu_share"
    app:showAsAction="ifRoom"
    android:title="@string/share"/>
</menu>
